updated gradle with libraries added application module and component added base for Activities and Presenters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.nelsonsachse.aroundme">
 
     <application
+        android:name=".application.AroundMeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
